Update traveler-manual with instructions about email sending

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -24,7 +24,7 @@
 				<li>Κόστος Συμμετοχής: εγγραφές σε συνέδρια, events κλπ. (θα πρέπει να συμπληρωθεί είτε σε τοπικό νόμισμα είτε σε ευρώ).</li>
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
-				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
+				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Μετακίνησης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -58,7 +58,7 @@
 				<li><b>Λοιπά Έξοδα Μετακίνησης</b>: πχ εισιτήρια μέσων μαζικής μεταφοράς (πραγματική τιμή).</li>
 				<li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
 			</ul>
-			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
+			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Αποζημίωσης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
