Update user-manual with info about specialty and kind

--- a/travelsFront/app/templates/user-manual.hbs
+++ b/travelsFront/app/templates/user-manual.hbs
@@ -20,8 +20,29 @@
 			<ul>
 				<li>Όνομα</li>
 				<li>Επώνυμο</li>
-				<li>Ειδικότητα (Λίστα επιλογών)</li>
-				<li>Ιδιότητα (Λίστα επιλογών)</li>
+				<li>Ειδικότητα
+					<ul>
+						<li>Ηλεκτρολόγος Μηχανικός και Μηχανικός Υπολογιστών</li>
+						<li>Επιστήμη Πληροφορικής και Τηλεπικοινωνιών</li>
+						<li>Θετικές Επιστήμες (φυσική, χημεία, μαθηματικά)</li>
+						<li>Διοίκηση και Οικονομία</li>
+						<li>Δημοσιογραφία - Επικοινωνία</li>
+						<li>Νομική</li>
+						<li>Φιλοσοφία - Παιδαγωγική - Φιλολογία</li>
+						<li>Άλλες ειδικότητες Μηχανικών (πλην Ηλεκτρολόγων Μηχανικών)</li>
+						<li>Μέλος ΔΕΠ</li>
+						<li>Άλλες ειδικότητες</li>
+					</ul>
+				</li>
+				<li>Ιδιότητα
+					<ul>
+						<li>Πρόεδρος ΔΣ</li>
+						<li>Μέλος ΔΣ</li>
+						<li>Προσωπικό (η συγκεκριμένη επιλογή αφορά μόνιμο προσωπικό)</li>
+						<li>Στέλεχος ΕΔΕΤ</li>
+						<li>Συνεργάτης (η συγκεκριμένη επιλογή αφορά εξωτερικούς συνεργάτες)</li>
+					</ul>
+				</li>
 				<li>Α.Φ.Μ</li>
 				<li>Δ.Ο.Υ (Λίστα επιλογών)</li>
 				<li>ΙΒΑΝ</li>
@@ -35,5 +56,4 @@
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
 {{/paper-card}}
-
 	
