--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -12,9 +12,13 @@
 				<li>Τόπος Προορισμού - Προς* </li>
 				<li>Έναρξη Εργασιών *</li>
 				<li>Λήξη Εργασιών *</li>
+				<li>Αναχώρηση</li>
+				<li>Επιστροφή</li>
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
 				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Μετακίνησης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
+
+				Σημειώνεται ότι όλες οι ώρες που αποθηκεύονται στο σύστημα, θα πρέπει να συμπληρώνονται σε τοπική ώρα Ελλάδας.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
