Fix typo in traveler-manual

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -17,8 +17,8 @@
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
 				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Μετακίνησης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
-
-				Σημειώνεται ότι όλες οι ώρες που αποθηκεύονται στο σύστημα, θα πρέπει να συμπληρώνονται σε τοπική ώρα Ελλάδας.
+				<br><br>
+				(Σημειώνεται ότι όλες οι ώρες που αποθηκεύονται στο σύστημα, θα πρέπει να συμπληρώνονται σε τοπική ώρα Ελλάδας)
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
