Update manuals with new controller label

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -113,12 +113,12 @@
 	        </tr>
 	        <tr>
 	          <td>8</td> 
-	          <td>Σε επεξεργασία από τον Υπεύθυνο Μετακινήσεων</td>
+	          <td>Σε επεξεργασία - Λογιστικός Έλεγχος</td>
 	          <td>-</td>
 	        </tr>
 	        <tr>
 	          <td>9</td> 
-	          <td>Οριστικοποιημένη από τον Υπεύθυνο Μετακινήσεων</td>
+	          <td>Οριστικοποιημένη - Λογιστικός Έλεγχος</td>
 	          <td>-</td>
 	        </tr>
 	        <tr>
