--- a/travelsFront/app/templates/controller-manual.hbs
+++ b/travelsFront/app/templates/controller-manual.hbs
@@ -3,8 +3,7 @@
     {{#paper-card-title-text}}
 			<h4>Επεξεργασία Υποβεβλημένης Αίτησης Αποζημίωσης</h4>    
 			<p>
-				Η Υπεύθυνη Μετακινήσεων έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβεβλημένης αίτησης αποζημίωσης, 
-				αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
+				Ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο έχει τη δυνατότητα να επεξεργαστεί τα στοιχεία μιας υποβεβλημένης αίτησης αποζημίωσης, αφού μεταβεί στην καρτέλα «Λίστα Αιτήσεων» και επιλέξει την ενέργεια «Επεξεργασία».
 				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία με τις πραγματικές τελικές τιμές τους 
 				(με * σημειώνονται τα υποχρεωτικά πεδία):
 			<ul>
@@ -26,7 +25,7 @@
 				<li>Ημ. Πρ. Αίτησης Αποζημίωσης Απόφασης Μετακίνησης *</li>
 				<li>Αρ. Πρ. Αίτησης Αποζημίωσης Μετακίνησης *</li>
 			</ul>
-				Η Υπεύθυνη Μετακινήσεων θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές της και στη συνέχεια να υποβάλει την αίτηση. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
+				Ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο, θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτηση. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -38,12 +37,12 @@
 	    <h4>Λίστα Αιτήσεων</h4>
 			<p>
 				Στην καρτέλα «Λίστα Αιτήσεων» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις των μετακινούμενων. 
-				Στην συγκεκριμένη καρτέλα, η Υπεύθυνη Μετακινήσεων έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες: 
+				Στην συγκεκριμένη καρτέλα, ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες: 
 			<ul>	 
-			 	<li><b>Επεξεργασία</b>: η Υπεύθυνη Μετακινήσεων έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
+			 	<li><b>Επεξεργασία</b>: ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
 				<li><b>Αναίρεση της υποβολής</b>: δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
 				<li><b>Εξαγωγή Αρχείων</b>: δυνατότητα εξαγωγής των αρχείων «Αίτηση Αποζημίωσης Μετακίνησης» και «Απόφαση Αποζημίωσης».</li>
-				<li><b>Έγκριση από Πρόεδρο</b>: με την συγκεκριμένη ενέργεια η Υπεύθυνη Μετακινήσεων ενημερώνει το σύστημα ότι η μετακίνηση έχει λάβει την έγκριση του Προέδρου.</li>
+				<li><b>Έγκριση από Πρόεδρο</b>: με την συγκεκριμένη ενέργεια ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο ενημερώνει το σύστημα ότι η μετακίνηση έχει λάβει την έγκριση του Προέδρου.</li>
 			</ul>	
 			Επιπλέον, δίνεται η δυνατότητα αναζήτησης στη λίστα των αιτήσεων, με βάση το έργο στο οποίο ανήκει μία μετακίνηση, 
 			το επώνυμο του μετακινούμενου και τις ημερομηνίες αναχώρησης και επιστροφής.
@@ -55,10 +54,10 @@
 {{#paper-card}}
   {{#paper-card-title}}
     {{#paper-card-title-text}}
-			<h4>Ενέργειες Από Υπεύθυνη Μετακινήσεων</h4> 
+			<h4>Ενέργειες Από τον χρήστη που εκτελεί τον Λογιστικό Έλεγχο</h4> 
 			<p>Στη συνέχεια θα παρουσιάσουμε όλες τις καταστάσεις στις οποίες είναι δυνατόν να βρεθεί μια αίτηση. 
 			Στον πίνακα που ακολουθεί παρουσιάζονται οι καταστάσεις των αιτήσεων της εφαρμογής καθώς και οι ενέργειες 
-			που μπορεί να εκτελέσει η Υπεύθυνη Μετακινήσεων ανάλογα με την κατάσταση της αίτησης:
+			που μπορεί να εκτελέσει ο χρήστης που εκτελεί τον Λογιστικό Έλεγχο ανάλογα με την κατάσταση της αίτησης:
 			</p>
 			<div class="container">
 			<table class="table responsive"> 
@@ -107,12 +106,12 @@
 	        </tr>
 	        <tr>
 	          <td>8</td> 
-	          <td>Σε επεξεργασία από τον Υπεύθυνο Μετακινήσεων</td>
+	          <td>Σε επεξεργασία - Λογιστικός Έλεγχος</td>
 	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής</td>
 	        </tr>
 	        <tr>
 	          <td>9</td> 
-	          <td>Οριστικοποιημένη από τον Υπεύθυνο Μετακινήσεων</td>
+	          <td>Οριστικοποιημένη - Λογιστικός Έλεγχος</td>
 	          <td>Αναίρεση Υποβολής, Εξαγωγή Αρχείων, Έγκριση από Πρόεδρο</td>
 	        </tr>
 	        <tr>
