--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -1,15 +1,16 @@
-<td>{{petition.dse}}</td>
-<td>{{petition.first_name}}</td>
-<td>{{petition.last_name}}</td>
-<td>{{petition.project.name}}</td>
-<td>{{petition.arrival_point.name}}</td>
-<td>{{to-date petition.created}}</td>
-<td>{{to-date petition.updated}}</td>
-<td>{{to-date petition.depart_date}}</td>
-<td>{{to-date petition.return_date}}</td>
-<td>{{petition.status_label}}</td>
-<td>{{petition.total_cost}}</td>
-<td class="icon-cell">
+{{#component wrapper as |row|}}
+{{#row.cell}}{{petition.dse}}{{/row.cell}}
+{{#row.cell}}{{petition.first_name}}{{/row.cell}}
+{{#row.cell}}{{petition.last_name}}{{/row.cell}}
+{{#row.cell}}{{petition.project.name}}{{/row.cell}}
+{{#row.cell}}{{petition.arrival_point.name}}{{/row.cell}}
+{{#row.cell}}{{to-date petition.created}}{{/row.cell}}
+{{#row.cell}}{{to-date petition.updated}}{{/row.cell}}
+{{#row.cell}}{{to-date petition.depart_date}}{{/row.cell}}
+{{#row.cell}}{{to-date petition.return_date}}{{/row.cell}}
+{{#row.cell}}{{petition.status_label}}{{/row.cell}}
+{{#row.cell}}{{petition.total_cost}}{{/row.cell}}
+{{#row.cell class="icon-cell"}}
 {{#if (can "approve petition")}}
 	{{#if (or (eq petition.status 2) (eq petition.status 3))}}
     {{list-action action=(action "edit" petition) icon='create' tooltip-message=(t 'tooltip_edit')  iconButton=true confirm=false}}
@@ -38,8 +39,8 @@
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
 {{/if}} 
-</td>
-
+{{/row.cell}}
+{{/component}}
 
 
 
