Add missing column name in table head

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -53,6 +53,7 @@
           <th>Ημ/νία Αναχώρησης</th>
           <th>Ημ/νία Επιστροφής</th>
           <th>Κατάσταση</th>
+          <th>Συνολικό Κόστος</th>
           <th class="link-tab">{{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}</th>
         </tr>
     </thead>
