--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -2,17 +2,17 @@
 	<span style="margin-left:1%;">
 		{{t 'filters.title'}}
 	</span>
-	{{paper-input value=filters.dse onChange=(action (mut filters.dse)) type="number" placeholder=(t 'placeholder.filterByDSE')}}
-	{{#paper-select id="filter" value=filters.project.name onChange=(action (mut filters.project)) placeholder=placeholderLabel }}
+	{{paper-input class="filterInput" value=filters.dse onChange=(action (mut filters.dse)) type="number" placeholder=(t 'placeholder.filterByDSE')}}
+	{{paper-input class="filterInput" value=filters.last_name onChange=(action (mut filters.last_name)) placeholder=(t 'placeholder.filterByName')}}
+	{{#paper-select class="filterSelect" value=filters.project.name onChange=(action (mut filters.project)) placeholder=placeholderLabel }}
 		{{#each projects as |project|}}
   		{{#paper-option value=project }}
     		{{project.name}}
   		{{/paper-option}}
 		{{/each}}
 	{{/paper-select}}
-	{{paper-input value=filters.name onChange=(action (mut filters.name)) placeholder=(t 'placeholder.filterByName')}}
-	{{pick-a-date date=date on-selected=(action (mut filters.startDate)) placeholder=(t 'placeholder.filterByStartDate')}}
-	{{pick-a-date date=date on-selected=(action (mut filters.endDate)) placeholder=(t 'placeholder.filterByEndDate')}}
+	{{pick-a-date date=depart_date__gte on-selected=(action (mut filters.depart_date__gte)) placeholder=(t 'placeholder.filterByStartDate')}}
+	{{pick-a-date date=return_date__lte on-selected=(action (mut filters.return_date__lte)) placeholder=(t 'placeholder.filterByEndDate')}}
 	{{#paper-button bubbles=false raised=true onClick=(action "handleFilterEntry")}}{{t 'list.button.search'}}{{/paper-button}}
 	{{#paper-button bubbles=false raised=true onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}
 </div>
