Add total_cost column in petition list table

--- a/travelsFront/app/templates/petition-list.hbs
+++ b/travelsFront/app/templates/petition-list.hbs
@@ -57,6 +57,7 @@
           {{#head.column}}Ημ/νία Αναχώρησης{{/head.column}}
           {{#head.column}}Ημ/νία Επιστροφής{{/head.column}}
           {{#head.column}}Κατάσταση{{/head.column}}
+          {{#head.column}}Συνολικό Κόστος{{/head.column}}
           {{#head.column class="link-tab"}}{{#paper-button raised=true primary=true onClick=(transition-to "userPetition" "new") bubbles=false }}Νεα Αιτηση{{/paper-button}}{{/head.column}}
     {{/table.head}}
     {{#table.body as |body|}}
