--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -18,8 +18,8 @@
       {{/paper-option}}
     {{/each}}
 	{{/paper-select}}	
-	{{pick-a-date date=depart_date__gte on-selected=(action (mut filters.depart_date__gte)) placeholder=(t 'placeholder.filterByStartDate')}}
-	{{pick-a-date date=return_date__lte on-selected=(action (mut filters.return_date__lte)) placeholder=(t 'placeholder.filterByEndDate')}}
+	{{pick-a-date date=date on-selected=(action (mut filters.depart_date__gte)) placeholder=(t 'placeholder.filterByStartDate')}}
+	{{pick-a-date date=date on-selected=(action (mut filters.return_date__lte)) placeholder=(t 'placeholder.filterByEndDate')}}
 	{{#paper-button bubbles=false raised=true onClick=(action "handleFilterEntry")}}{{t 'list.button.search'}}{{/paper-button}}
 	{{#paper-button bubbles=false raised=true onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}
 </div>
