Update guidelines about pdf export from user

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -53,6 +53,8 @@
 				<li><b>Λοιπά Έξοδα Μετακίνησης - Περιγραφή</b>: περιγραφή των εξόδων π.χ. εισιτήρια λεωφορείου.</li>
 			</ul>
 			Στη συνέχεια θα πρέπει να αποθηκεύσει τις αλλαγές του (επιλέγοντας το κουμπί «ΑΠΟΘΗΚΕΥΣΗ») και να υποβάλει την αίτηση (επιλέγοντας το κουμπί «ΥΠΟΒΟΛΗ») ώστε να εγκριθεί η αποζημίωσή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Αποζημίωσης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
+			<br><br>
+			Σημειώνεται ότι πριν την τελική υποβολή της Αίτησης Αποζημίωσης, ο μετακινούμενος θα πρέπει να κατεβάσει την Αίτηση Αποζημίωσης Μετακίνησης, μέσω της επιλογής που δίνεται από τη λίστα των αιτήσεων. Το συγκεκριμένο έγγραφο θα πρέπει να επισυνάπτεται πάντοτε στον φυσικό φάκελο με τα αποδεικτικά έγγραφα των εξόδων που προσκομίζεται στο Λογιστήριο.
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
@@ -99,12 +101,12 @@
 	        <tr>
 	          <td>5</td> 
 	          <td>Απόφαση Μετακίνησης υπογεγραμμένη από Πρόεδρο</td>
-	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής</td>
+	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολήςς, Εξαγωγή Αρχείου</td>
 	        </tr>
 	        <tr>
 	          <td>6</td> 
 	          <td>Σε επεξεργασία από μετακινούμενο για αποζημίωση</td>
-	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής</td>
+	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής, Εξαγωγή Αρχείου</td>
 	        </tr>
 	        <tr>
 	          <td>7</td> 
