--- a/travelsFront/app/templates/user-compensation.hbs
+++ b/travelsFront/app/templates/user-compensation.hbs
@@ -11,7 +11,7 @@
           confirm=true value=(t 'form.button.submit') 
           tooltip-message=(t 'tooltip_save_b4_submit') 
           promptTitle=(t 'prompt_submit_title') 
-          promptMessage=(t 'prompt_submit_message') 
+          promptMessage=(t 'prompt_submit_comp_message') 
         }}
       {{/ form.controls}}
   {{/ model-form/form }}
