--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_application/content.html
@@ -8,12 +8,10 @@
 		<td>Μετακινούμενος</td>
 		<td>{{first_name}} {{last_name}}</td>
 	</tr>
-
 	<tr>
 		<td>Ιδιότητα</td>
 		<td>{{kind}}</td>
 	</tr>
-
 	<tr>
 		<td>Ειδικότητα</td>
 		<td>{{specialty}}</td>
@@ -22,12 +20,13 @@
 		<td>ΑΦΜ</td>
 		<td>{{tax_reg_num}}</td>
 	</tr>
-
-
 	<tr>
 		<td>Τραπεζικός Λογιαριασμός IBAN</td>
 		<td>{{iban}}</td>
 	</tr>
+</table>
+
+<table style="width:100%">
 	<tr>
 		<td>Ημερομηνία μετακίνησης</td>
 		<td>Αναχώρηση</td>
@@ -35,7 +34,6 @@
 		<td>Επιστροφή</td>
 		<td>{{return_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημερομηνία εργασιών</td>
 		<td>Έναρξη</td>
@@ -43,7 +41,6 @@
 		<td>Λήξη</td>
 		<td>{{task_end_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
 		<td>Πριν</td>
@@ -51,22 +48,14 @@
 		<td>Μετά</td>
 		<td>{{trip_days_after}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημέρες μετακίνησης εργασιών</td>
 		<td>{{transport_days}}</td>
 	</tr>
-
 	<tr>
 		<td>Διανυκτερεύσεις</td>
 		<td>{{overnights_num}}</td>
 	</tr>
-
-	<tr>
-		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{reason}}</td>
-	</tr>
-
 	<tr>
 		<td>Τόπος μετακίνησης</td>
 		<td>Από:</td>
@@ -74,12 +63,16 @@
 		<td>Προς:</td>
 		<td>{{arrival_point}}</td>
 	</tr>
-
 	<tr>
 		<td>Μέσο μετακίνησης</td>
 		<td>{{means_of_transport}}</td>
 	</tr>
-
+</table>
+<table style="width:100%">
+	<tr>
+		<td>Αιτιολογία μετακίνησης</td>
+		<td>{{reason}}</td>
+	</tr>
 </table>
 <br>
 <table style="width:100%">
@@ -92,52 +85,46 @@
 		<td>Αεροπορικό εισιτήριο</td>
 		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
 	</tr>
-
 	<tr>
 		<td>Ημερήσια Αποζημίωση</td>
 		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
 	</tr>
-
-
 	<tr>
 		<td>Διανυκτέρευση</td>
 		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
 	</tr>
-
-
 	<tr>
 		<td>Κόστος συμμετοχής</td>
 		<td>{{participation_cost}} {{participation_default_currency}}  </td>
 	</tr>
-
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
 		<td>{{additional_expenses}} {{additional_expenses_default_currency}}  </td>
 	</tr>
-
 	<tr>
 		<td><b>Σύνολο</td>
 		<td><b>{{total_cost}} ευρώ </b></td>
 	</tr>
-
 </table>
-<br>
+
+<footer style="position: absolute;right: 0;bottom: 0;left: 0;text-align: right;" >
+	{% include 'texpenses/footer.html' %}
+</footer>
+
+<br><br><br><br><br><br><br><br><br><br><br><br>
 <table style="width:100%">
 	<caption style='text-align: center;'><b>Ο μετακινούμενος αιτείται την ακόλουθη αποζημίωση:</b></caption>
 	<tr>
 		<td>Ημερήσια Αποζημίωση</td>
 		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
 	</tr>
-
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
 		<td>{{additional_expenses}} ευρώ</td>
 	</tr>
-
 	<tr>
 		<td><b>Σύνολο Αποζημίωσης</td>
 		<td><b>{{compensation_final}} ευρώ</b></td>
 	</tr>
-
 </table>
 {% endblock %}
