--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -24,21 +24,26 @@
 		<td>Μετακινούμενος</td>
 		<td>{{first_name}} {{last_name}}</td>
 	</tr>
-
 	<tr>
 		<td>Ιδιότητα</td>
 		<td>{{kind}}</td>
 	</tr>
-
 	<tr>
 		<td>Ειδικότητα</td>
 		<td>{{specialty}}</td>
 	</tr>
-
 	<tr>
 		<td>ΑΦΜ</td>
 		<td>{{tax_reg_num}}</td>
 	</tr>
+</table>
+
+<footer style="position: absolute;right: 0;bottom: 0;left: 0;text-align: right;" >
+	{% include 'texpenses/footer.html' %}
+</footer>
+
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<table style="width:100%">
 	<tr>
 		<td>Ημερομηνία μετακίνησης</td>
 		<td>Αναχώρηση</td>
@@ -46,7 +51,6 @@
 		<td>Επιστροφή</td>
 		<td>{{return_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημερομηνία εργασιών</td>
 		<td>Έναρξη</td>
@@ -54,7 +58,6 @@
 		<td>Λήξη</td>
 		<td>{{task_end_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
 		<td>Πριν</td>
@@ -62,22 +65,14 @@
 		<td>Μετά</td>
 		<td>{{trip_days_after}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημέρες μετακίνησης εργασιών</td>
 		<td>{{transport_days}}</td>
 	</tr>
-
 	<tr>
 		<td>Διανυκτερεύσεις</td>
 		<td>{{overnights_num}}</td>
 	</tr>
-
-	<tr>
-		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{reason}}</td>
-	</tr>
-
 	<tr>
 		<td>Τόπος μετακίνησης</td>
 		<td>Από:</td>
@@ -85,14 +80,19 @@
 		<td>Προς:</td>
 		<td>{{arrival_point}}</td>
 	</tr>
-
 	<tr>
 		<td>Μέσο μετακίνησης</td>
 		<td>{{means_of_transport}}</td>
 	</tr>
-
 </table>
-<br>
+
+<table style="width:100%">
+	<tr>
+		<td>Αιτιολογία μετακίνησης</td>
+		<td>{{reason}}</td>
+	</tr>
+</table>
+
 <table style="width:100%">
 	<caption style='text-align: center;'><b>Οι πραγματοποιηθείσες δαπάνες έχουν ως εξής:</b></caption>
 	<tr>
@@ -103,36 +103,28 @@
 		<td>Αεροπορικό εισιτήριο</td>
 		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
 	</tr>
-
 	<tr>
 		<td>Ημερήσια Αποζημίωση</td>
 		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
 	</tr>
-
-
 	<tr>
 		<td>Διανυκτέρευση</td>
 		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
 	</tr>
-
-
 	<tr>
 		<td>Κόστος συμμετοχής</td>
 		<td>{{participation_cost}} {{participation_default_currency}}  </td>
 	</tr>
-
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
 		<td>{{additional_expenses}} {{additional_expenses_default_currency}}  </td>
 	</tr>
-
 	<tr>
 		<td><b>Σύνολο</td>
 		<td><b>{{total_cost}} ευρώ </b></td>
 	</tr>
-
 </table>
-<br>
+
 <table style="width:100%">
 	<caption style='text-align: center;'><b>ΕΓΚΡΙΝΟΥΜΕ
 			Την κάτωθι αποζημίωση για τον μετακινούμενο:</b></caption>
@@ -140,16 +132,13 @@
 		<td>Ημερήσια Αποζημίωση</td>
 		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
 	</tr>
-
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
 		<td>{{additional_expenses}} ευρώ</td>
 	</tr>
-
 	<tr>
 		<td><b>Σύνολο Αποζημίωσης</td>
 		<td><b>{{compensation_final}} ευρώ</b></td>
 	</tr>
-
 </table>
 {% endblock %}
