--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
@@ -8,21 +8,21 @@
 		<td>Μετακινούμενος</td>
 		<td>{{first_name}} {{last_name}}</td>
 	</tr>
-
 	<tr>
 		<td>Ιδιότητα</td>
 		<td>{{kind}}</td>
 	</tr>
-
 	<tr>
 		<td>Ειδικότητα</td>
 		<td>{{specialty}}</td>
 	</tr>
-
 	<tr>
 		<td>Τραπεζικός Λογιαριασμός IBAN</td>
 		<td>{{iban}}</td>
 	</tr>
+</table>
+
+<table style="width:100%">
 	<tr>
 		<td>Ημερομηνία μετακίνησης</td>
 		<td>Αναχώρηση</td>
@@ -30,7 +30,6 @@
 		<td>Επιστροφή</td>
 		<td>{{return_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημερομηνία εργασιών</td>
 		<td>Έναρξη</td>
@@ -38,7 +37,6 @@
 		<td>Λήξη</td>
 		<td>{{task_end_date|date:"d/m/Y"}}</td>
 	</tr>
-
 	<tr>
 		<td>Εναπομείνασες ημέρες μετακίνησης εργασιών</td>
 		<td>Πριν</td>
@@ -46,22 +44,14 @@
 		<td>Μετά</td>
 		<td>{{trip_days_after}}</td>
 	</tr>
-
 	<tr>
 		<td>Ημέρες μετακίνησης εργασιών</td>
 		<td>{{transport_days}}</td>
 	</tr>
-
 	<tr>
 		<td>Διανυκτερεύσεις</td>
 		<td>{{overnights_num}}</td>
 	</tr>
-
-	<tr>
-		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{reason}}</td>
-	</tr>
-
 	<tr>
 		<td>Τόπος μετακίνησης</td>
 		<td>Από:</td>
@@ -69,14 +59,19 @@
 		<td>Προς:</td>
 		<td>{{arrival_point}}</td>
 	</tr>
-
 	<tr>
 		<td>Μέσο μετακίνησης</td>
 		<td>{{means_of_transport}}</td>
 	</tr>
-
 </table>
-<br>
+
+<table style="width:100%">
+	<tr>
+		<td>Αιτιολογία μετακίνησης</td>
+		<td>{{reason}}</td>
+	</tr>
+</table>
+
 <table style="width:100%">
 	<caption style='text-align: center;'><b>Βεβαιώνουμε την ακόλουθη δέσμευση πίστωσης:</b></caption>
 	<tr>
@@ -87,7 +82,6 @@
 		<td>Αεροπορικό εισιτήριο</td>
 		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
 	</tr>
-
 	<tr>
 		<td>Διανυκτέρευση</td>
 		<td>{{overnights_num_manual}} ημέρες x {{accommodation_cost}} = {{overnights_sum_cost}} {{accommodation_default_currency}}  </td>
@@ -96,21 +90,17 @@
 		<td>Ημερήσια Αποζημίωση</td>
 		<td>{{compensation_days_manual}} ημέρες x {{compensation_level}} = {{compensation_cost}} ευρώ </td>
 	</tr>
-
 	<tr>
 		<td>Κόστος συμμετοχής</td>
 		<td>{{participation_cost}} {{participation_default_currency}}  </td>
 	</tr>
-
 	<tr>
 		<td>Λοιπά έξοδα μετακίνησης</td>
 		<td>{{additional_expenses_initial}} {{additional_expenses_default_currency}}  </td>
 	</tr>
-
 	<tr>
 		<td><b>Σύνολο</td>
 		<td>{{total_cost}} ευρώ</td>
 	</tr>
-
 </table>
 {% endblock %}
