Change pdf style
* make some cells span more than one column
* remove minor typos
* add some spaces

--- a/travelsBackend/texpenses/templates/texpenses/compensation_decision_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/compensation_decision_protocol.html
@@ -2,9 +2,9 @@
 {% block protocol_content%}
 <h5 style="text-align: right;">
 	ΑΝΑΡΤΑΤΑΙ ΣΤΗ ΔΙΑΥΓΕΙΑ<br>
-	ΔΣΕ:{{dse}} Αρ.Μετ:{{movement_id}}<br>
-	Αθήνα,{{compensation_decision_date|date:"d/m/Y"}}<br>
-	Αρ.Πρωτ.:{{compensation_decision_protocol}}
+	ΔΣΕ:&nbsp;{{dse}} Αρ.Μετ:&nbsp;{{movement_id}}<br>
+	Αθήνα,&nbsp;{{compensation_decision_date|date:"d/m/Y"}}<br>
+	Αρ.&nbsp;Πρωτ.&nbsp;:{{compensation_decision_protocol}}
 </h5>
 
 {% endblock %}
