--- a/travelsBackend/texpenses/templates/texpenses/decision_protocol.html
+++ b/travelsBackend/texpenses/templates/texpenses/decision_protocol.html
@@ -2,9 +2,9 @@
 {% block protocol_content%}
 <h5 style="text-align: right;">
 	ΑΝΑΡΤΑΤΑΙ ΣΤΗ ΔΙΑΥΓΕΙΑ<br>
-	ΔΣΕ:{{dse}} Αρ.Μετ:{{movement_id}}<br>
-	Αθήνα,{{movement_date_protocol|date:"d/m/Y"}}<br>
-	Αρ.Πρωτ.:{{movement_protocol}}
+	ΔΣΕ:&nbsp;{{dse}} Αρ.Μετ:&nbsp;{{movement_id}}<br>
+	Αθήνα,&nbsp;{{movement_date_protocol|date:"d/m/Y"}}<br>
+	Αρ.&nbsp;Πρωτ.:&nbsp;{{movement_protocol}}
 </h5>
 
 {% endblock %}
