--- a/travelsBackend/texpenses/templates/texpenses/decision_signature.html
+++ b/travelsBackend/texpenses/templates/texpenses/decision_signature.html
@@ -7,6 +7,6 @@
 </h5>
 <h5 style="text-align: right;">
 	Ο ΠΡΟΕΔΡΟΣ ΚΑΙ ΔΙΕΥΘΥΝΩΝ<br>
-       	ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΕΤ ΑΕ.
+       	ΣΥΜΒΟΥΛΟΣ ΤΗΣ ΕΔΕΤ ΑΕ
 </h5>
 {% endblock %}
