--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
@@ -6,23 +6,20 @@
 	<caption style='text-align: center;'><b>Αίτηση Δαπάνης Μετακίνησης</b></caption>
 	<tr>
 		<td>Μετακινούμενος</td>
-		<td>{{first_name}} {{last_name}}</td>
+		<td colspan="4">{{first_name}} {{last_name}}</td>
 	</tr>
 	<tr>
 		<td>Ιδιότητα</td>
-		<td>{{kind}}</td>
+		<td colspan="4">{{kind}}</td>
 	</tr>
 	<tr>
 		<td>Ειδικότητα</td>
-		<td>{{specialty}}</td>
+		<td colspan="4">{{specialty}}</td>
 	</tr>
 	<tr>
 		<td>Τραπεζικός Λογιαριασμός IBAN</td>
-		<td>{{iban}}</td>
+		<td colspan="4">{{iban}}</td>
 	</tr>
-</table>
-
-<table style="width:100%">
 	<tr>
 		<td>Ημερομηνία μετακίνησης</td>
 		<td>Αναχώρηση</td>
@@ -63,12 +60,9 @@
 		<td>Μέσο μετακίνησης</td>
 		<td>{{means_of_transport}}</td>
 	</tr>
-</table>
-
-<table style="width:100%">
 	<tr>
 		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{reason}}</td>
+		<td colspan="4">{{reason}}</td>
 	</tr>
 </table>
 
