--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_decision/content.html
@@ -84,12 +84,9 @@
 		<td>Μέσο μετακίνησης</td>
 		<td>{{means_of_transport}}</td>
 	</tr>
-</table>
-
-<table style="width:100%">
 	<tr>
 		<td>Αιτιολογία μετακίνησης</td>
-		<td>{{reason}}</td>
+		<td colspan="4">{{reason}}</td>
 	</tr>
 </table>
 <br>
