Change footer image

--- a/travelsBackend/texpenses/templates/texpenses/footer.html
+++ b/travelsBackend/texpenses/templates/texpenses/footer.html
@@ -14,7 +14,7 @@
 
 		<td rowspan='2'>
 			{% load static %}
-			<img src="{% static 'images/footer_image.png' %}" style="width: 62px; height:62px;" alt="My image"/>
+			<img src="{% static 'images/iso_footer.jpg' %}" style="width: 62px; height:62px;" alt="My image"/>
 		</td>
 
 	</tr>
