--- a/travelsFront/app/templates/components/petition-listing.hbs
+++ b/travelsFront/app/templates/components/petition-listing.hbs
@@ -20,6 +20,25 @@
     {{list-action action=(action "pdf" petition "2") icon='file_download' tooltip-message=(t 'pdf_travel_decision') iconButton=true confirm=false}}
     {{list-action action=(action "approve" petition) icon='done' tooltip-message=(t 'travel_presidentApproval') iconButton=true confirm=true promptTitle=(t 'prompt_done_title') promptMessage=(t 'prompt_done_message')}}
   {{/if}}
+{{else if (can "managerApprove petition")}}
+  {{#if (and (lte petition.status 3) (eq petition.needsApproval false))}}
+    {{list-action action=(action "managerApproval" petition) icon='done' tooltip-message=(t 'travel_managerApproval') iconButton=true confirm=true promptTitle=(t 'prompt_approve_title') promptMessage=(t 'prompt_approve_message')}}
+  {{/if}}
+  {{#if (eq petition.status 1)}}
+    {{list-action action=(action "edit" petition) icon='create' tooltip-message=(t 'tooltip_edit')  iconButton= true confirm=false}}
+    {{list-action action=(action "del" petition) icon='delete_forever' warn=true tooltip-message=(t 'tooltip_delete') iconButton=true confirm=true promptTitle=(t 'prompt_delete_title') promptMessage=(t 'prompt_delete_message')}}
+  {{else if (or (eq petition.status 5) (eq petition.status 6))}}
+    {{#if (eq petition.tax_reg_num account.user.tax_reg_num)}}
+      {{list-action action=(action "edit" petition) icon='create' tooltip-message=(t 'tooltip_edit')  iconButton= true confirm=false}}
+    {{/if}}
+  {{else if (or (eq petition.status 2) (eq petition.status 7))}}
+    {{#if (eq petition.tax_reg_num account.user.tax_reg_num)}}
+      {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
+    {{/if}}
+  {{/if}}  
+{{!--   {{#if (and (gte petition.status 4) (eq petition.needsCostApproval false))}}
+    {{list-action action=(action "managerCostApproval" petition) icon='euro_symbol' tooltip-message=(t 'travel_managerCostApproval') iconButton=true confirm=true promptTitle=(t 'prompt_cost_approve_title') promptMessage=(t 'prompt_cost_approve_message')}}
+  {{/if}} --}}
 {{else if (can "compensate petition")}}
   {{#if (or (eq petition.status 7) (eq petition.status 8))}}
     {{list-action action=(action "edit" petition) icon='create' tooltip-message=(t 'tooltip_edit')  iconButton=true confirm=false}}
@@ -39,7 +58,7 @@
   {{else if (or (eq petition.status 2) (eq petition.status 7))}}
     {{list-action action=(action "undo" petition) icon='undo' tooltip-message=(t 'tooltip_undo') iconButton=true confirm=true promptTitle=(t 'prompt_undo_title') promptMessage=(t 'prompt_undo_message')}}
   {{/if}}
-{{/if}} 
+{{/if}}
 {{/row.cell}}
 {{/component}}
 
