Update user manuals

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -1,7 +1,7 @@
 {{#paper-card}}
   {{#paper-card-title}}
     {{#paper-card-title-text}}
-			<h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>    
+			<h4>Δημιουργία Νέας Αίτησης Μετακίνησης</h4>
 			<p>
 				Ο μετακινούμενος θα πρέπει να μεταβεί στην καρτέλα «Νέα Αίτηση», προκειμένου να δημιουργήσει μία αίτηση μετακίνησης.
 				Εκεί θα πρέπει να συμπληρώσει τα ακόλουθα στοιχεία: (με * σημειώνονται τα υποχρεωτικά πεδία)
@@ -14,6 +14,7 @@
 				<li>Λήξη Εργασιών *</li>
 				<li>Αναχώρηση</li>
 				<li>Επιστροφή</li>
+				<li>Κόστος Συμμετοχής - Τοπικό Νόμισμα: έξοδα συμμετοχής σε συνέδρια, ημερίδες κτλ. (συμπληρώνονται στο τοπικό νόμισμα της χώρας προορισμού)</li>
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
 				Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Μετακίνησης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
@@ -32,7 +33,7 @@
 				Στην καρτέλα «Οι Αιτήσεις μου» παρουσιάζονται, ανάλογα με την κατάσταση (status) στην οποία βρίσκονται, οι αιτήσεις του μετακινούμενου. 
 				Στην συγκεκριμένη καρτέλα, ο μετακινούμενος έχει τη δυνατότητα να πραγματοποιήσει τις παρακάτω ενέργειες:
 			<ul>	 
-			 	<li><b>Επεξεργασία</b>: ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li> 
+			 	<li><b>Επεξεργασία</b>: ο μετακινούμενος έχει την δυνατότητα να επεξεργαστεί τα στοιχεία μιας αίτησης και στη συνέχεια να την αποθηκεύσει ή/και να την υποβάλει.</li>
 				<li><b>Διαγραφή</b>: ο μετακινούμενος έχει την δυνατότητα να διαγράψει μια αίτησή του.</li>
 				<li><b>Αναίρεση της υποβολής</b>: δυνατότητα της αναίρεσης της υποβολής μιας αίτησης και επιστροφή της στην προηγούμενη κατάσταση.</li>
 			</ul>	
@@ -58,12 +59,12 @@
 			</p>
 		{{/paper-card-title-text}}
   {{/paper-card-title}}
-{{/paper-card}}		
+{{/paper-card}}
 
 {{#paper-card}}
   {{#paper-card-title}}
     {{#paper-card-title-text}}
-			<h4>Ενέργειες Από τον Μετακινούμενο</h4> 
+			<h4>Ενέργειες Από τον Μετακινούμενο</h4>
 			<p>Στη συνέχεια θα παρουσιάσουμε όλες τις καταστάσεις στις οποίες είναι δυνατόν να βρεθεί μια αίτηση.
 			Στον πίνακα που ακολουθεί παρουσιάζονται οι καταστάσεις των αιτήσεων της εφαρμογής καθώς και οι ενέργειες που μπορεί να 
 			εκτελέσει ο μετακινούμενος ανάλογα με την κατάσταση της αίτησης:
@@ -79,52 +80,52 @@
 		    </thead>
 		    <tbody>
 	       	<tr>
-	          <td>1</td> 
+	          <td>1</td>
 	          <td>Σε επεξεργασία από τον μετακινούμενο</td>
 	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής,  Διαγραφή</td>
 	        </tr>
 	        <tr>
-	          <td>2</td> 
+	          <td>2</td>
 	          <td>Υποβεβλημένη από τον μετακινούμενο</td>
 	          <td>Αναίρεση Υποβολής</td>
 	        </tr>
 	        <tr>
-	          <td>3</td> 
+	          <td>3</td>
 	          <td>Σε επεξεργασία από την γραμματεία</td>
 	          <td>-</td>
 	        </tr>
 	        <tr>
-	          <td>4</td> 
+	          <td>4</td>
 	          <td>Οριστικοποιημένη από την γραμματεία</td>
 	          <td>-</td>
 	        </tr>
 	        <tr>
-	          <td>5</td> 
+	          <td>5</td>
 	          <td>Απόφαση Μετακίνησης υπογεγραμμένη από Πρόεδρο</td>
 	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολήςς, Εξαγωγή Αρχείου</td>
 	        </tr>
 	        <tr>
-	          <td>6</td> 
+	          <td>6</td>
 	          <td>Σε επεξεργασία από μετακινούμενο για αποζημίωση</td>
 	          <td>Επεξεργασία με δυνατότητα Αποθήκευσης και Υποβολής, Εξαγωγή Αρχείου</td>
 	        </tr>
 	        <tr>
-	          <td>7</td> 
+	          <td>7</td>
 	          <td>Υποβεβλημένη από μετακινούμενο για αποζημίωση</td>
 	          <td>Αναίρεση Υποβολής</td>
 	        </tr>
 	        <tr>
-	          <td>8</td> 
+	          <td>8</td>
 	          <td>Σε επεξεργασία - Λογιστικός Έλεγχος</td>
 	          <td>-</td>
 	        </tr>
 	        <tr>
-	          <td>9</td> 
+	          <td>9</td>
 	          <td>Οριστικοποιημένη - Λογιστικός Έλεγχος</td>
 	          <td>-</td>
 	        </tr>
 	        <tr>
-	          <td>10</td> 
+	          <td>10</td>
 	          <td>Απόφαση Αποζημίωσης υπογεγραμμένη από Πρόεδρο</td>
 	          <td>-</td>
 	        </tr>
