--- a/travelsFront/app/templates/user-manual.hbs
+++ b/travelsFront/app/templates/user-manual.hbs
@@ -39,7 +39,7 @@
 						<li>Πρόεδρος ΔΣ</li>
 						<li>Μέλος ΔΣ</li>
 						<li>Προσωπικό (η συγκεκριμένη επιλογή αφορά μόνιμο προσωπικό)</li>
-						<li>Στέλεχος ΕΔΕΤ</li>
+						<li>Στέλεχος ΕΔΕΤ (η συγκεκριμένη επιλογή αφορά εσωτερικούς συνεργάτες)</li>
 						<li>Συνεργάτης (η συγκεκριμένη επιλογή αφορά εξωτερικούς συνεργάτες)</li>
 					</ul>
 				</li>
