Update manuals with timezone info

--- a/travelsFront/app/templates/traveler-manual.hbs
+++ b/travelsFront/app/templates/traveler-manual.hbs
@@ -8,12 +8,12 @@
 			<ul>
 				<li>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών) *</li>
 				<li>Αιτιολογία Μετακίνησης *</li>
-				<li>Τόπος Προορισμού - Από *</li>
+				<li>Τόπος Αναχώρησης - Από *</li>
 				<li>Τόπος Προορισμού - Προς* </li>
-				<li>Έναρξη Εργασιών *</li>
-				<li>Λήξη Εργασιών *</li>
-				<li>Αναχώρηση</li>
-				<li>Επιστροφή</li>
+				<li>Έναρξη Εργασιών * (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
+				<li>Λήξη Εργασιών * (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
+				<li>Αναχώρηση (συμπληρώνεται στην τοπική ώρα της πόλης αναχώρησης)</li>
+				<li>Επιστροφή (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
 				<li>Κόστος Συμμετοχής - Τοπικό Νόμισμα: έξοδα συμμετοχής σε συνέδρια, ημερίδες κτλ. (συμπληρώνονται στο τοπικό νόμισμα της χώρας προορισμού)</li>
 				<li>Αρχικές Προτάσεις Μετακινούμενου</li>
 			</ul>
