--- a/travelsFront/app/templates/manager-manual.hbs
+++ b/travelsFront/app/templates/manager-manual.hbs
@@ -8,12 +8,12 @@
       <ul>
         <li>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών) *</li>
         <li>Αιτιολογία Μετακίνησης *</li>
-        <li>Τόπος Προορισμού - Από *</li>
+        <li>Τόπος Αναχώρησης - Από *</li>
         <li>Τόπος Προορισμού - Προς* </li>
-        <li>Έναρξη Εργασιών *</li>
-        <li>Λήξη Εργασιών *</li>
-        <li>Αναχώρηση</li>
-        <li>Επιστροφή</li>
+        <li>Έναρξη Εργασιών * (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
+        <li>Λήξη Εργασιών * (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
+        <li>Αναχώρηση (συμπληρώνεται στην τοπική ώρα της πόλης αναχώρησης)</li>
+        <li>Επιστροφή (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
         <li>Αρχικές Προτάσεις Μετακινούμενου</li>
       </ul>
         Ο μετακινούμενος θα πρέπει πρώτα να αποθηκεύσει τις αλλαγές του και στη συνέχεια να υποβάλει την αίτησή του. Σημειώνεται ότι δεν υπάρχει περιορισμός στο πόσες φορές μπορεί να αποθηκευθεί η αίτηση μέχρι την υποβολή της. Με την υποβολή της Αίτησης Μετακίνησης, θα ενημερωθούν μέσω email ο Υπεύθυνος του Έργου και η Γραμματεία.
