--- a/travelsFront/app/templates/secretary-manual.hbs
+++ b/travelsFront/app/templates/secretary-manual.hbs
@@ -12,12 +12,12 @@
 				<li>Έγκριση τελικών δαπανών της Μετακίνησης από τον Υπεύθυνο Έργου</li>
 				<li>Έργο - Υπεύθυνος Έργου (Λίστα Επιλογών)</li>
 				<li>Αιτιολογία Μετακίνησης</li>
-				<li>Τόπος Προορισμού - Από</li>
+				<li>Τόπος Αναχώρησης - Από</li>
 				<li>Τόπος Προορισμού - Προς</li>
-				<li>Έναρξη Εργασιών</li>
-				<li>Λήξη Εργασιών</li>
-				<li>Αναχώρηση *</li>
-				<li>Επιστροφή *</li>
+				<li>Έναρξη Εργασιών (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
+				<li>Λήξη Εργασιών (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
+				<li>Αναχώρηση * (συμπληρώνεται στην τοπική ώρα της πόλης αναχώρησης)</li>
+				<li>Επιστροφή * (συμπληρώνεται στην τοπική ώρα της πόλης προορισμού)</li>
 				<li>Μέσο Μετακίνησης (Λίστα Επιλογών) *</li>
 				<li>Τιμή Εισιτηρίου *</li>
 				<li>Τρόπος Πληρωμής (Λίστα Επιλογών) *</li>
