Minor template changes to support domestic travels

--- a/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_compensation_decision/content.html
@@ -97,7 +97,7 @@
 		<td><b>ΠΟΣΟ</b></td>
 	</tr>
 	<tr>
-		<td>Αεροπορικό εισιτήριο</td>
+		<td>Εισιτήριο</td>
 		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
 	</tr>
 	<tr>
