--- a/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
+++ b/travelsBackend/texpenses/templates/texpenses/movement_petition_application/content.html
@@ -73,7 +73,7 @@
 		<td>ΠΡΟΥΠΟΛΟΓΙΣΜΟΣ</td>
 	</tr>
 	<tr>
-		<td>Αεροπορικό εισιτήριο</td>
+		<td>Εισιτήριο</td>
 		<td>{{transportation_cost}} {{transportation_default_currency}} </td>
 	</tr>
 	<tr>
