--- a/travelsFront/app/styles/app.scss
+++ b/travelsFront/app/styles/app.scss
@@ -43,7 +43,7 @@ table {
         text-align: center;
     }
     th.link-tab {
-      text-align: center;      
+      text-align: center;
     }
     td {
         padding: 6px 8px;
@@ -233,4 +233,8 @@ table.responsive {
     align-items: baseline;
     color: #000000;
   }
+}
+
+.filterCard {
+  padding: 0px 16px 0px 16px;
 }
