--- a/travelsFront/app/templates/components/list-filter.hbs
+++ b/travelsFront/app/templates/components/list-filter.hbs
@@ -1,7 +1,5 @@
-<div>
-	<span style="margin-left:1%;">
-		{{t 'filters.title'}}
-	</span>
+{{#paper-card}}
+  {{#paper-card-content class="filterCard"}}
 	{{paper-input class="filterInput" value=filters.dse onChange=(action (mut filters.dse)) type="number" placeholder=(t 'placeholder.filterByDSE')}}
 	{{paper-input class="filterInput" value=filters.last_name onChange=(action (mut filters.last_name)) placeholder=(t 'placeholder.filterByName')}}
 	{{#paper-select class="filterSelect" value=filters.project.name onChange=(action (mut filters.project)) placeholder=placeholderLabel }}
@@ -20,6 +18,9 @@
 	{{/paper-select}}	
 	{{pick-a-date date=date on-selected=(action (mut filters.depart_date__gte)) placeholder=(t 'placeholder.filterByStartDate')}}
 	{{pick-a-date date=date on-selected=(action (mut filters.return_date__lte)) placeholder=(t 'placeholder.filterByEndDate')}}
-	{{#paper-button bubbles=false raised=true onClick=(action "handleFilterEntry")}}{{t 'list.button.search'}}{{/paper-button}}
-	{{#paper-button bubbles=false raised=true onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}
-</div>
+{{/paper-card-content}}
+	<div class="md-actions" layout="row" style="margin-left:1%;">
+		{{#paper-button bubbles=false raised=true onClick=(action "handleFilterEntry")}}{{t 'list.button.search'}}{{/paper-button}}
+		{{#paper-button bubbles=false raised=true onClick=(action "clearFilters")}}{{t 'list.button.clear'}}{{/paper-button}}
+	</div>
+{{/paper-card}}
