--- a/travelsFront/app/templates/components/list-action.hbs
+++ b/travelsFront/app/templates/components/list-action.hbs
@@ -1,14 +1,14 @@
 {{#if iconButton}}
 	{{#paper-button raised=true onClick=(action "handleClick") iconButton=iconButton warn=warn }}
 	{{paper-icon icon}}
-	{{#tooltip-on-element}}
+	{{#tooltip-on-element side='right'}}
       {{tooltip-message}}
   {{/tooltip-on-element}}{{/paper-button}}
 	
 {{else}}
 	{{#paper-button raised=true accent=true onClick=(action "handleClick") iconButton=iconButton }}
 	{{value}}
-	{{#tooltip-on-element}}
+	{{#tooltip-on-element side='right'}}
       {{tooltip-message}}
   {{/tooltip-on-element}}{{/paper-button}}
 {{/if}}
